# reportportal-llm-query

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requrirements.txt
config/: config.yaml.example  prompts.yaml
docker/: Dockerfile  docker-compose.yaml
scripts/: run_tests.sh  setup.sh
src/application/: __init__.py  cli_interface.py  response_generator.py  session_manager.py  web_interface.py
src/data_access/: cache_manager.py  data_normalizer.py  reportportal_client.py
src/llm_integration/: embeddings_manager.py  llm_interface.py  prompt_engineer.py  query_processor.py
src/models/: query_models.py  test_execution.py
src/utils/: config.py  logger.py  validators.py
tests/: conftest.py  test_reportportal_client.py  test_response_generator.py  test_validators.py
